[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
